--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -1,13 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.fragment.category.categoryFragment">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <TextView
+    <data>
+
+    </data>
+
+    <com.lancer.passwordhelper.widget.MultipleStatusView
+        android:id="@+id/category_status_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/bottom_name_category" />
+        tools:context=".ui.fragment.category.CategoryFragment">
 
-</FrameLayout>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="@string/bottom_name_category" />
+
+    </com.lancer.passwordhelper.widget.MultipleStatusView>
+</layout>
