--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,6 +11,18 @@
         <item name="android:windowNoTitle">true</item>
     </style>
 
+    <style name="SettingTextViewStyle">
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">0dp</item>
+        <item name="android:textSize">18sp</item>
+
+        <item name="layout_constraintRight_toRightOf">parent</item>
+        <item name="android:paddingTop">4dp</item>
+        <item name="android:paddingBottom">4dp</item>
+        <item name="android:textColor">@color/color_black</item>
+        <item name="android:layout_marginLeft">20dp</item>
+    </style>
+
     <style name="StatusViewTextStyle">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
