--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -17,7 +17,7 @@
             android:id="@+id/setting_toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/color_white" />
+            android:background="@color/colorPrimary" />
 
         <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
@@ -71,8 +71,8 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="20dp"
                         android:text="@string/setting_spot_hint"
-                        android:textSize="18sp"
                         android:textColor="@color/color_black"
+                        android:textSize="18sp"
                         app:layout_constraintBottom_toBottomOf="@id/setting_fingerprint_iv"
                         app:layout_constraintLeft_toRightOf="@id/setting_fingerprint_iv"
                         app:layout_constraintTop_toTopOf="@id/setting_fingerprint_iv" />
@@ -102,9 +102,9 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="20dp"
-                        android:textSize="18sp"
-                        android:textColor="@color/color_black"
                         android:text="@string/setting_long_click_hint"
+                        android:textColor="@color/color_black"
+                        android:textSize="18sp"
                         app:layout_constraintBottom_toBottomOf="@id/setting_long_click_iv"
                         app:layout_constraintLeft_toRightOf="@id/setting_long_click_iv"
                         app:layout_constraintTop_toTopOf="@id/setting_long_click_iv" />
