--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">#ffffffff</color>
+    <color name="colorPrimaryDark">#aaaaaa</color>
+    <color name="colorAccent">#ff333333</color>
     <color name="color_black">#000000</color>
     <color name="color_white">#ffffff</color>
     <color name="color_gary">#EDEEED</color>
+    <color name="windowBackground">#f5f5f5</color>
 </resources>
