更新 card 表结构

--- a/app/src/main/res/layout/item_category.xml
+++ b/app/src/main/res/layout/item_category.xml
@@ -24,6 +24,7 @@
             android:gravity="center"
             android:text="@{viewModel.categoryName}"
             android:textColor="@color/color_black"
+            android:background="@color/colorAccent"
             android:textSize="28sp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
