--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,6 +13,7 @@
         <item name="android:windowNoTitle">true</item>
     </style>
 
+    <!--setting_fragment textView style-->
     <style name="SettingTextViewStyle">
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_width">0dp</item>
@@ -23,6 +24,24 @@
         <item name="android:paddingBottom">4dp</item>
         <item name="android:textColor">@color/color_black</item>
         <item name="android:layout_marginLeft">20dp</item>
+    </style>
+
+    <style name="EditTextViewStyle_black">
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:textColor">@color/color_black</item>
+        <item name="android:layout_marginStart">15dp</item>
+        <item name="layout_constraintStart_toStartOf">parent</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="EditTextViewStyle_blue">
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:textColor">@color/colorAccent_blue</item>
+        <item name="android:layout_marginStart">15dp</item>
+        <item name="layout_constraintStart_toStartOf">parent</item>
+        <item name="android:textSize">16sp</item>
     </style>
 
     <style name="StatusViewTextStyle">
