--- a/app/src/main/res/layout/activity_input.xml
+++ b/app/src/main/res/layout/activity_input.xml
@@ -7,11 +7,9 @@
 
         <import type="com.lancer.passwordhelper.ui.activity.input.InputViewModel" />
 
+
         <variable
             name="viewModel"
-            type="InputViewModel" />
-        <variable
-            name="Card"
             type="com.lancer.passwordhelper.bean.Card" />
     </data>
 
@@ -93,6 +91,7 @@
                     android:layout_marginStart="15dp"
                     android:layout_marginEnd="15dp"
                     android:hint="名称"
+                    android:text="@{viewModel.name}"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -105,6 +104,7 @@
                     android:layout_marginTop="20dp"
                     android:layout_marginEnd="15dp"
                     android:hint="账号"
+                    android:text="@{viewModel.account}"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/input_name_et" />
@@ -116,8 +116,9 @@
                     android:layout_marginStart="15dp"
                     android:layout_marginTop="20dp"
                     android:layout_marginEnd="80dp"
-                    android:inputType="textPassword"
                     android:hint="密码"
+                    android:inputType="textPassword"
+                    android:text="@{viewModel.password}"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/input_account_et" />
@@ -140,6 +141,7 @@
                     android:layout_marginTop="20dp"
                     android:layout_marginEnd="15dp"
                     android:hint="链接"
+                    android:text="@{viewModel.webUrl}"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/input_password_et" />
@@ -174,6 +176,7 @@
                     android:layout_marginTop="20dp"
                     android:layout_marginEnd="15dp"
                     android:hint="备注"
+                    android:text="@{viewModel.remark}"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/input_spinner" />
