--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -22,14 +22,16 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            android:background="@drawable/shape_edit_activity_bg"
             app:titleTextColor="@color/color_black">
 
         </androidx.appcompat.widget.Toolbar>
 
-        <RelativeLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/header_rl"
             android:layout_width="match_parent"
             android:layout_height="100dp"
+            android:background="@drawable/shape_edit_activity_bg"
             android:layout_marginLeft="30dp"
             android:layout_marginTop="15dp"
             android:layout_marginRight="30dp"
@@ -38,18 +40,46 @@
             app:layout_constraintTop_toBottomOf="@id/edit_toolbar">
 
             <TextView
-                android:id="@+id/herader_title_tv"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
+                android:id="@+id/header_title_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
-                android:gravity="center"
-                android:text="@={viewModel.folder}"
-                android:textSize="18sp" />
+                android:layout_marginTop="10dp"
+                android:text="@={viewModel.name}"
+                android:textColor="@color/color_black"
+                android:textSize="22sp"
+                android:textStyle="bold"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="微博" />
 
-        </RelativeLayout>
+            <ImageView
+                android:id="@+id/header_title_iv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:src="@drawable/ic_folder"
+                app:layout_constraintLeft_toLeftOf="@id/header_title_tv"
+                app:layout_constraintTop_toBottomOf="@id/header_title_tv" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="3dp"
+                android:text="@={viewModel.folder}"
+                android:textColor="@color/color_black"
+                android:textSize="16sp"
+                app:layout_constraintBottom_toBottomOf="@id/header_title_iv"
+                app:layout_constraintLeft_toRightOf="@id/header_title_iv"
+                app:layout_constraintTop_toTopOf="@id/header_title_iv"
+                tools:text="娱乐" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/content_cl"
+            android:background="@drawable/shape_edit_activity_bg"
+
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="30dp"
