--- a/app/src/main/res/layout/item_folder.xml
+++ b/app/src/main/res/layout/item_folder.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="viewModel"
-            type="com.lancer.passwordhelper.bean.Category" />
+            type="com.lancer.passwordhelper.model.bean.Category" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
