--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="viewModel"
-            type="com.lancer.passwordhelper.bean.Card" />
+            type="com.lancer.passwordhelper.model.bean.Card" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -19,10 +19,10 @@
             android:id="@+id/edit_toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/shape_edit_activity_bg"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:background="@drawable/shape_edit_activity_bg"
             app:titleTextColor="@color/color_black">
 
         </androidx.appcompat.widget.Toolbar>
@@ -31,10 +31,10 @@
             android:id="@+id/header_rl"
             android:layout_width="match_parent"
             android:layout_height="100dp"
-            android:background="@drawable/shape_edit_activity_bg"
             android:layout_marginLeft="30dp"
             android:layout_marginTop="15dp"
             android:layout_marginRight="30dp"
+            android:background="@drawable/shape_edit_activity_bg"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/edit_toolbar">
@@ -78,13 +78,13 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/content_cl"
-            android:background="@drawable/shape_edit_activity_bg"
-
             android:layout_width="match_parent"
+
             android:layout_height="wrap_content"
             android:layout_marginStart="30dp"
             android:layout_marginTop="15dp"
             android:layout_marginEnd="30dp"
+            android:background="@drawable/shape_edit_activity_bg"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/header_rl">
