--- a/app/src/main/res/layout/item_category.xml
+++ b/app/src/main/res/layout/item_category.xml
@@ -5,7 +5,7 @@
 
     <data>
 
-        <import type="com.lancer.passwordhelper.bean.Category" />
+        <import type="com.lancer.passwordhelper.model.bean.Category" />
 
         <variable
             name="viewModel"
